--- a/index.html
+++ b/index.html
@@ -113,19 +113,19 @@
           <img src="https://images.unsplash.com/photo-1549924231-f129b911e442?auto=format&fit=crop&w=400&q=80" alt="Capinha Rosa" />
           <h3>Capinha Rosa</h3>
           <p>Design elegante e proteção total para seu celular.</p>
-          <button>Comprar</button>
+          <button onclick="window.open('https://wa.me/5561982112467?text=Olá! Tenho interesse na Capinha Rosa.', '_blank')">Comprar</button>
         </div>
         <div class="produto">
           <img src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?auto=format&fit=crop&w=400&q=80" alt="Fone Bluetooth" />
           <h3>Fone Bluetooth</h3>
           <p>Som de alta qualidade sem fios, perfeito para o dia a dia.</p>
-          <button>Comprar</button>
+          <button onclick="window.open('https://wa.me/5561982112467?text=Olá! Tenho interesse no Fone Bluetooth.', '_blank')">Comprar</button>
         </div>
         <div class="produto">
           <img src="https://images.unsplash.com/photo-1517336714731-489689fd1ca8?auto=format&fit=crop&w=400&q=80" alt="Película Protetora" />
           <h3>Película Protetora</h3>
           <p>Resistência contra riscos para a tela do seu celular.</p>
-          <button>Comprar</button>
+          <button onclick="window.open('https://wa.me/5561982112467?text=Olá! Tenho interesse na Película Protetora.', '_blank')">Comprar</button>
         </div>
       </div>
     </section>
